getNextToken throws exception to be handled on parser. Changed location for token "is" to ReservedSymbol. Changed translations from empty strings to empty lists